<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layout_full"
    android:orientation="vertical" >

    <Button
        android:id="@+id/home_button_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/iced_seafood" />

    <Button
        android:id="@+id/home_button_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/fresh_seafood" />

    <Button
        android:id="@+id/home_button_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/dry_seafood" />

    <LinearLayout
        style="@style/layout_vertical"
        android:layout_weight="2"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/home_button_shopping_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/shopping_cart" />

        <Button
            android:id="@+id/home_button_contact_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/contact_us" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/contact_tele" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/contact_addr" />

</LinearLayout>